changes in public folder

--- a/public/index.html
+++ b/public/index.html
@@ -2,29 +2,44 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta name="theme-color" content="#000000">
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- METAS APPLE MOBILE WEB APP  -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Desafio Frontend">
+
+    <!-- METAS MICROSOFT MOBILE WEB APP  -->
+    <meta name="msapplication-TileImage" content="%PUBLIC_URL%/icons/app-icon-144-144.png">
+    <meta name="msapplication-TileColor" content="#000">
+
+    <title>Desafio Frontend</title>
+
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+
+    <!-- APPLE ICONS -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/apple-icon-60-60.png" size="60x60">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/apple-icon-76-76.png" size="76x76">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/apple-icon-120-120.png" size="120x120">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/apple-icon-152-152.png" size="152x152">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/apple-icon-180-180.png" size="180x180">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/apple-icon-1024-1024.png" size="1024x1024">
+
+    <!-- MANIFEST -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+
+    <!-- STYLES -->
+    <style>
+      .section { padding: 4rem 1.5rem 3rem !important; }
+      .description { overflow: auto; }
+      .card { margin-bottom: 1rem; }
+    </style>
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
