--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,36 @@
       .section { padding: 4rem 1.5rem 3rem !important; }
       .description { overflow: auto; }
       .card { margin-bottom: 1rem; }
+
+      @media (min-width: 1px) and (max-width: 768px){
+        .navbar-burger{
+          display: none !important;
+        }
+        .navbar{
+          align-items: stretch;
+          display: flex;
+          min-height: 3.25rem;
+        }
+        .navbar-menu{
+          /*background-color: #363636 !important;*/
+          display: flex !important;
+          align-items: stretch;
+          flex-grow: 1;
+          flex-shrink: 0;
+          -webkit-box-flex: 1;
+          box-shadow: none;
+          padding: none;
+        }
+        .navbar-end{
+          justify-content: flex-end;
+          margin-left: auto;
+          align-items: stretch;
+          display: flex;
+        }
+        /*.navbar-item {
+          color: whitesmoke !important;
+        }*/
+      }
     </style>
   </head>
   <body>
